# video-to-context

./: .gitignore  README.md  pyproject.toml
.claude/commands/: v2i.md
v2i/: __init__.py  __main__.py  cli.py  clipboard.py  extractor.py  optimizer.py
